Added js, css and blade files

--- a/.env
+++ b/.env
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=policy_revise
+DB_DATABASE=polmis_db
 DB_USERNAME=root
-DB_PASSWORD=root
+DB_PASSWORD=Paler_12345
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -56,4 +56,3 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 GOOGLE_CLIENT_ID=1027090894742-slojc7eu1lrj49vi56ie3hot5q1ilu23.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
 GOOGLE_REDIRECT_URI=
-
