--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
     "guzzlehttp/guzzle": "^7.2",
     "laravel/framework": "^11.0",
     "laravel/sanctum": "^4.0",
+    "laravel/socialite": "^5.18",
     "laravel/tinker": "^2.8"
   },
   "require-dev": {
@@ -28,7 +29,10 @@
       "App\\": "app/",
       "Database\\Factories\\": "database/factories/",
       "Database\\Seeders\\": "database/seeders/"
-    }
+    },
+    "files": [
+      "app/Helpers/UserRolesHelper.php"
+    ]
   },
   "autoload-dev": {
     "psr-4": {
