Modified view OOB, export OOB, submit proposal, edit proposal for both proponent and secretary

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:IPVfWM5hqscQB/t7whrGJsDO8nVmUUeojrwuBnuTnM4=
+APP_KEY=base64:pzCH4GG8Wq64SRv8PbSLVc4q7inILf/ux+WooFZk21M=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=new_db
+DB_DATABASE=polmis_db
 DB_USERNAME=root
 DB_PASSWORD=Paler_12345
 
