Modified Agenda Tables

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:pzCH4GG8Wq64SRv8PbSLVc4q7inILf/ux+WooFZk21M=
+APP_KEY=base64:2u4eugAnuNAX5+P+tfaIhU7xXdRU3VfD/Vn3YNhKpYY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -13,7 +13,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=polmis_db
 DB_USERNAME=root
-DB_PASSWORD=Paler_12345
+DB_PASSWORD=root
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
