--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     "laravel/framework": "^11.0",
     "laravel/sanctum": "^4.0",
     "laravel/socialite": "^5.18",
-    "laravel/tinker": "^2.8"
+    "laravel/tinker": "^2.8",
+    "league/csv": "^9.22"
   },
   "require-dev": {
     "fakerphp/faker": "^1.9.1",
