--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=PolMIS
 APP_ENV=local
 APP_KEY=base64:2u4eugAnuNAX5+P+tfaIhU7xXdRU3VfD/Vn3YNhKpYY=
 APP_DEBUG=true
@@ -11,9 +11,16 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=polmis_db
+DB_DATABASE=new_db
 DB_USERNAME=root
-DB_PASSWORD=Paler_12345
+DB_PASSWORD=root
+
+# Second Database Connection to HRMIS online
+DB_HOST2=127.0.0.1
+DB_PORT2=3306
+DB_DATABASE2=db_hrmis
+DB_USERNAME2=root
+DB_PASSWORD2=root
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
