Update seeders and others

--- a/.env
+++ b/.env
@@ -11,16 +11,17 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=polmis_db
+# DB_DATABASE=polmis_db
+DB_DATABASE=polmis_db_backup1
 DB_USERNAME=root
 DB_PASSWORD=Paler_12345
 
 # Second Database Connection to HRMIS online
-DB_HOST2=127.0.0.1
-DB_PORT2=3306
-DB_DATABASE2=db_hrmis
-DB_USERNAME2=root
-DB_PASSWORD2=root
+# DB_HOST2=127.0.0.1
+# DB_PORT2=3306
+# DB_DATABASE2=db_hrmis
+# DB_USERNAME2=root
+# DB_PASSWORD2=root
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
