Modify the Add Proposal function and Added a Other Matter function

--- a/.env
+++ b/.env
@@ -16,11 +16,11 @@ DB_USERNAME=root
 DB_PASSWORD=root
 
 # Second Database Connection to HRMIS online
-DB_HOST2=127.0.0.1
-DB_PORT2=3306
-DB_DATABASE2=db_hrmis
-DB_USERNAME2=root
-DB_PASSWORD2=root
+# DB_HOST2=127.0.0.1
+# DB_PORT2=3306
+# DB_DATABASE2=db_hrmis
+# DB_USERNAME2=root
+# DB_PASSWORD2=root
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
