Fix Proposal File Preview and Phone Compatibility, Modify the  changing of proposal file status, Redesign Proposal file table, Modify proposal file ordering and Modify create group proposal

--- a/.env
+++ b/.env
@@ -11,10 +11,10 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-# DB_DATABASE=polmis_db
-DB_DATABASE=new_db
+DB_DATABASE=polmis_db
+# DB_DATABASE=polmis_db_backup1
 DB_USERNAME=root
-DB_PASSWORD=root
+DB_PASSWORD=Paler_12345
 
 # Second Database Connection to HRMIS online
 # DB_HOST2=127.0.0.1
