Added View As Button in navbar and other changes

--- a/.env
+++ b/.env
@@ -11,10 +11,16 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=polmis_db
-# DB_DATABASE=polmis_db_backup1
+DB_DATABASE=polmis_db_backup
 DB_USERNAME=root
-DB_PASSWORD=Paler_12345
+DB_PASSWORD=root
+
+# DB_CONNECTION=mysql
+# DB_HOST=slsu-db.agmstech.com
+# DB_PORT=3306
+# DB_DATABASE=policy
+# DB_USERNAME=policy
+# DB_PASSWORD=Q34nHS&fIK80!0F
 
 # Second Database Connection to HRMIS online
 # DB_HOST2=127.0.0.1
