--- a/.env
+++ b/.env
@@ -8,20 +8,27 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
+# DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=new_db
-# DB_DATABASE=polmis_db_backup1
+DB_DATABASE=polmis_db
 DB_USERNAME=root
 DB_PASSWORD=root
 
+# Connection to POLICY DOMAIN Online
+# DB_CONNECTION=mysql
+# DB_HOST=slsu-db.agmstech.com
+# DB_PORT=3306
+# DB_DATABASE=policy
+# DB_USERNAME=policy
+# DB_PASSWORD=Q34nHS&fIK80!0F
+
 # Second Database Connection to HRMIS online
-# DB_HOST2=127.0.0.1
+# DB_HOST2=slsu-db.agmstech.com
 # DB_PORT2=3306
 # DB_DATABASE2=db_hrmis
-# DB_USERNAME2=root
-# DB_PASSWORD2=root
+# DB_USERNAME2=issp
+# DB_PASSWORD2=Q34nHS&fIK80!0F
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
