--- a/.env
+++ b/.env
@@ -8,20 +8,21 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
+# LOCAL DATABASE CONNECTION
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=new_db
+DB_DATABASE=polmis_db_backup
 DB_USERNAME=root
 DB_PASSWORD=root
 
 # Connection to POLICY DOMAIN Online
 # DB_CONNECTION=mysql
-# DB_HOST=slsu-db.agmstech.com
+# DB_HOST=103.56.5.168
 # DB_PORT=3306
 # DB_DATABASE=policy
 # DB_USERNAME=policy
-# DB_PASSWORD=Q34nHS&fIK80!0F
+# DB_PASSWORD=Il0v3h0n3st!!!
 
 # Second Database Connection to HRMIS online
 # DB_HOST2=slsu-db.agmstech.com
