--- a/.env
+++ b/.env
@@ -10,26 +10,11 @@ LOG_LEVEL=debug
 
 # LOCAL DATABASE CONNECTION
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=polmis_db_backup
+DB_DATABASE=polmis
 DB_USERNAME=root
 DB_PASSWORD=root
-
-# Connection to POLICY DOMAIN Online
-# DB_CONNECTION=mysql
-# DB_HOST=103.56.5.168
-# DB_PORT=3306
-# DB_DATABASE=policy
-# DB_USERNAME=policy
-# DB_PASSWORD=Il0v3h0n3st!!!
-
-# Second Database Connection to HRMIS online
-# DB_HOST2=slsu-db.agmstech.com
-# DB_PORT2=3306
-# DB_DATABASE2=db_hrmis
-# DB_USERNAME2=issp
-# DB_PASSWORD2=Q34nHS&fIK80!0F
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
