--- a/.env
+++ b/.env
@@ -15,6 +15,13 @@ DB_DATABASE=new_db
 DB_USERNAME=root
 DB_PASSWORD=root
 
+
+DB_HOST2=127.0.0.1
+DB_PORT2=3306
+DB_DATABASE2=db_hrmis
+DB_USERNAME2=root
+DB_PASSWORD2=root
+
 # Connection to POLICY DOMAIN Online
 # DB_CONNECTION=mysql
 # DB_HOST=slsu-db.agmstech.com
