Added Group Proposal Files Features with Migration and Model

--- a/.env
+++ b/.env
@@ -12,9 +12,10 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=polmis
+DB_DATABASE=polmis_db
 DB_USERNAME=root
 DB_PASSWORD=root
+
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
