Modified View Meeting Proposal and Others

--- a/.env
+++ b/.env
@@ -12,31 +12,10 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=new_db
+DB_DATABASE=polmis_db
 DB_USERNAME=root
 DB_PASSWORD=root
 
-
-DB_HOST2=127.0.0.1
-DB_PORT2=3306
-DB_DATABASE2=db_hrmis
-DB_USERNAME2=root
-DB_PASSWORD2=root
-
-# Connection to POLICY DOMAIN Online
-# DB_CONNECTION=mysql
-# DB_HOST=slsu-db.agmstech.com
-# DB_PORT=3306
-# DB_DATABASE=policy
-# DB_USERNAME=policy
-# DB_PASSWORD=Q34nHS&fIK80!0F
-
-# Second Database Connection to HRMIS online
-# DB_HOST2=slsu-db.agmstech.com
-# DB_PORT2=3306
-# DB_DATABASE2=db_hrmis
-# DB_USERNAME2=issp
-# DB_PASSWORD2=Q34nHS&fIK80!0F
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
