--- a/.env
+++ b/.env
@@ -10,9 +10,9 @@ LOG_LEVEL=debug
 
 # LOCAL DATABASE CONNECTION
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=polmis_db
+DB_DATABASE=polmis_db_backup
 DB_USERNAME=root
 DB_PASSWORD=root
 
