--- a/.env
+++ b/.env
@@ -12,7 +12,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=polmis_db_backup
+DB_DATABASE=new_db
 DB_USERNAME=root
 DB_PASSWORD=root
 
